sidebar with routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,9 @@
-<h1>holiwis</h1>
+<div class="row container nt-4">
+  <div class="col-3">
+    <app-sidebar></app-sidebar>
+  </div>
 
-<app-por-capital></app-por-capital>
-<app-por-pais></app-por-pais>
-<app-por-region></app-por-region>
-<app-ver-pais></app-ver-pais>
-<app-sidebar></app-sidebar>
+  <div class="col">
+    <router-outlet></router-outlet>
+  </div>
+</div>
