--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -17,13 +17,13 @@
     </div>
 </div>
 <hr>
-<div class="alert alert-danger">
-    No se encontró nada con el término
+<div *ngIf="hayError" class="alert alert-danger">
+    No se encontró nada con el término "{{termino}}"
 </div>
 
 <div class="row">
     <div class="col">
-        <table class="table table-hover">
+        <table *ngIf="!hayError" class="table table-hover">
             <thead>
                 <tr>
                     <th>#</th>
