--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -2,18 +2,9 @@
 <hr>
 <div class="row">
     <div class="col">
-        <form 
-            autocomplete="off"
-            (ngSubmit)="buscar()"
-        >
-            <input 
-                [(ngModel)]="termino"
-                type="text"
-                name="termino"
-                placeholder="Buscar país..."
-                class="form-control" 
-            />
-        </form>
+        <app-pais-input
+            (onEnter)="buscar( $event )"
+        ></app-pais-input>
     </div>
 </div>
 <hr>
@@ -23,31 +14,6 @@
 
 <div class="row">
     <div class="col">
-        <table *ngIf="paises.length > 0" class="table table-hover">
-            <thead>
-                <tr>
-                    <th>#</th>
-                    <th>Bandera</th>
-                    <th>Nombre</th>
-                    <th>Población</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr *ngFor="let pais of paises; let i = index">
-                    <td>{{i + 1}}</td>
-                    <td>
-                        <img    class="small-flag" 
-                                src="{{pais.flags.svg}}" 
-                                alt="bandera de {{pais.name.common}}">
-                    </td>
-                    <td>{{pais.name.common}}</td>
-                    <td>{{pais.population | number}}</td>
-                    <td>
-                        <a [routerLink]="['/pais', pais.cca2]">Ver...</a>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+        <app-pais-table [paises]="paises"></app-pais-table>
     </div>
 </div>
