debounceTime in input

--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -4,6 +4,7 @@
 >
     <input 
         [(ngModel)]="termino"
+        (input)="teclaPresionada( $event )"
         type="text"
         name="termino"
         placeholder="Buscar país..."
