--- a/src/app/pais/components/pais-input/pais-input.component.html
+++ b/src/app/pais/components/pais-input/pais-input.component.html
@@ -7,7 +7,7 @@
         (input)="teclaPresionada( $event )"
         type="text"
         name="termino"
-        placeholder="Buscar país..."
+        placeholder={{placeHolder}}
         class="form-control" 
     />
 </form>
