--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,1 +1,26 @@
-<p>por-region works!</p>
+<h3>Buscar por Región <small>{{ regionActiva | titlecase }}</small></h3>
+<hr>
+
+<h5>Seleccione la Región</h5>
+<div class="row">
+    <div class="col">
+
+        <!-- [class.btn-primary]="region === regionActiva" -->
+        <!-- [ngClass]="{
+            'btn-primary': regionActiva === region,
+            'btn-outline-primary': regionActiva !== region
+        }" -->
+        <button *ngFor="let region of regiones;"
+                [class]="getClaseCSS( region )"
+                (click)="activarRegion( region )">
+            {{ region | titlecase }}
+        </button>
+    </div>
+
+    <div class="row">
+        <div class="col">
+            <app-pais-table [paises]="paises"></app-pais-table>
+        </div>
+    </div>
+</div>
+
