--- a/src/app/pais/pages/por-region/por-region.component.html
+++ b/src/app/pais/pages/por-region/por-region.component.html
@@ -1,9 +1,12 @@
-<h3>Buscar por Región <small>{{ regionActiva | titlecase }}</small></h3>
+<div class="animate__animated animate__fadeIn animate__slow">
+    <h3>Buscar por Región <small>{{ regionActiva | titlecase }}</small></h3>
+</div>
+
 <hr>
 
 <h5>Seleccione la Región</h5>
 <div class="row">
-    <div class="col">
+    <div class="col animate__animated animate__fadeInRight">
 
         <!-- [class.btn-primary]="region === regionActiva" -->
         <!-- [ngClass]="{
