--- a/src/app/pais/pages/por-capital/por-capital.component.html
+++ b/src/app/pais/pages/por-capital/por-capital.component.html
@@ -1,14 +1,17 @@
-<h2>Por Capital</h2>
-<hr>
-<div class="row">
-    <div class="col">
-        <app-pais-input
-            (onEnter)="buscar( $event )"
-            (onDebounce)="sugerencias( $event )"
-            placeHolder="Buscar capital..."
-        ></app-pais-input>
+<div class="animate__animated animate__fadeIn animate__slow">
+    <h2>Por Capital</h2>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <app-pais-input
+                (onEnter)="buscar( $event )"
+                (onDebounce)="sugerencias( $event )"
+                placeHolder="Buscar capital..."
+            ></app-pais-input>
+        </div>
     </div>
 </div>
+
 <hr>
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontró nada con el término "{{termino}}"
