--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -1,13 +1,16 @@
-<h2>Por País</h2>
-<hr>
-<div class="row">
-    <div class="col">
-        <app-pais-input
-            (onEnter)="buscar( $event )"
-            (onDebounce)="sugerencias( $event )"
-        ></app-pais-input>
+<div class="animate__animated animate__fadeIn animate__slow">
+    <h2>Por País</h2>
+    <hr>
+    <div class="row">
+        <div class="col">
+            <app-pais-input
+                (onEnter)="buscar( $event )"
+                (onDebounce)="sugerencias( $event )"
+            ></app-pais-input>
+        </div>
     </div>
 </div>
+
 <hr>
 <div *ngIf="hayError" class="alert alert-danger">
     No se encontró nada con el término "{{termino}}"
